test/resources/parser/failing/testOperandVal2.scala
object ValAsMultOperand {
  3 * val y: Int = 4; y
}